fixing-member-gaps

--- a/style.css
+++ b/style.css
@@ -540,7 +540,7 @@
   height: 330px;
   background-color: rgb(228, 224, 220);
   color: black;
-  margin-top: 3rem;
+  margin-top: 2rem;
   border-radius: 15px;
 }
 
